# stemist_hacks_project_2023

./: Cargo.toml
migrations/2023-07-22-215003_user_information/: down.sql  up.sql
resources/: questions.json  questions_and_answers.json
src/: main.rs  models.rs  schema.rs
src/commands/: mod.rs
src/commands/leaderboard/: leaderboard.rs  mod.rs  points.rs
src/commands/pq/: interface.rs
src/commands/users/: ask_question.rs  help.rs  mod.rs  userinfo.rs
src/json_structs/: config.rs  mod.rs  parse.rs  vec_bool_serialization.rs
