[package]
name = "stemist_hacks_project_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
dotenv = "0.15.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
text_io = "0.1.12"
diesel = { version = "2.1.0", features = ["postgres"] }
serde_json = "1.0.103"
chrono = "0.4.26"
